Docs: Complete documentation and ready configuration. (#5)
* docs(services): add concise JavaDoc to public methods

* feat: make project ready to run out of the box

- Added .env file to repository with all required variables
- Updated docker-compose.yml to use environment variables from .env
- Updated application.yml to use POSTGRES_* variables (consistent naming)
- Included RSA keys in repository for development/demo purposes
- Updated .gitignore to allow keys for dev (with warning about production)
- Organized badges horizontally in README (2 rows instead of 8)

Now anyone can clone the repo and run:
  docker-compose up -d

No configuration needed! Everything works out of the box.

SECURITY NOTE: The included RSA keys and .env are ONLY for development.
In production, generate new keys and use secret managers.

* fix: update Dockerfile to use Java 17 and remove obsolete version from docker-compose

- Changed from openjdk-8 to amazoncorretto-17 (compatible with Java 17 and ARM/M1)
- Updated both build and runtime stages to Java 17
- Removed obsolete 'version' attribute from docker-compose.yml
- Docker build now successfully compiles the project

Next step: Fix JwtAuthenticationFilter constructor issue

* fix: use InputStream for JAR resources and add RedisTemplate bean for health indicator

* docs: update README with out-of-the-box setup instructions and security warnings

* docs: update README with correct test credentials and add credentials table